# scView

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  scview.desktop  scview.sh  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/scview/: config.py  dependencies.py  main.py
backend/src/scview/api/: router.py
backend/src/scview/api/v1/: annotation.py  assessment.py  assistant.py  datasets.py  de.py  embeddings.py  enrichment.py  export.py  expression.py  genesets.py  ingest.py  markers.py  metadata.py  trajectory.py  ws.py
backend/src/scview/core/: anndata_adaptor.py  arrow_serializer.py  assessor.py  assistant.py  conversion.py  dataset_manager.py  guards.py  llm_advisor.py  msigdb_loader.py  pipeline.py  provenance.py  rerun.py
backend/src/scview/core/ingestion/: __init__.py  bundling.py  (+5 more)
backend/src/scview/models/: enums.py  schemas.py
backend/tests/: conftest.py  test_assessor.py  test_assistant.py  test_assistant_actions.py  test_assistant_insight.py  test_cell_type_annotation.py  test_dataset_manager.py  test_de.py  test_guards.py  test_ingestion_bundling.py  test_ingestion_detection.py  test_ingestion_loading.py  test_ingestion_merge.py  test_ingestion_nfcore.py  test_ingestion_session.py  test_ingestion_validation.py  test_markers_bool.py  test_pipeline_batch.py  test_pipeline_chain.py  test_pipeline_doublet.py  test_provenance.py  test_qc_distributions.py  test_rag_rerank.py  test_rag_units.py  test_rerun.py  test_subtab_endpoints.py
(+115 files in other folders)
