[project]
name = "scview"
version = "0.1.0"
description = "Single-cell RNA-seq browser-based visualization tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anndata>=0.11.0",
    "scanpy>=1.10.0",
    "scipy>=1.14.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "igraph>=0.11.0",
    "leidenalg>=0.10.0",
    "gseapy>=1.1.0",
    "harmonypy>=0.0.10",
    "openai>=1.50.0",
    "openpyxl>=3.1.0",
    "loompy>=3.0.7",
    "zarr>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scview"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
